# jap-english-tech-worddeck

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  word_phrases_list.csv
pages/: manage.py
pages/home/: admin.py  models.py  views.py
pages/home/data/: load_data.py
pages/home/migrations/: 0001_initial.py
pages/home/templates/home/: index.html
pages/pages/: asgi.py  settings.py  urls.py  wsgi.py
