[tool.poetry]
name = "jap-english-tech-worddeck"
version = "0.1.0"
description = "Japanese English word deck for system design"
authors = ["Sudhansu Bhushan Mishra <sbmishra2000@gmail.com>", "avie-dev <avie.dev.prg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
